--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.amadeus.asciidoc</groupId>
   <artifactId>asciidoctor-extension-apidoc</artifactId>
-  <description>AsciidoctorJ inline macro for linking to Javadoc</description>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  
+
+  <name>asciidoctor-extension-apidoc</name>
+  <description>AsciidoctorJ inline macro for linking to Javadoc</description>
+  <url>https://github.com/AmadeusITGroup/asciidoctor-extension-apidoc</url>
+
   <licenses>
     <license>
       <name>MIT</name>
@@ -14,18 +16,45 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  
+
+  <scm>
+    <connection>scm:git:https://github.com:AmadeusITGroup/asciidoctor-extension-apidoc.git</connection>
+    <developerConnection>scm:git:https://github.com:AmadeusITGroup/asciidoctor-extension-apidoc.git</developerConnection>
+    <url>https://github.com/AmadeusITGroup/asciidoctor-extension-apidoc</url>
+    <tag>HEAD</tag>
+  </scm>
+  <issueManagement>
+    <system>GitHub Issues</system>
+    <url>https://github.com/AmadeusITGroup/asciidoctor-extension-apidoc/issues</url>
+  </issueManagement>
+  <ciManagement>
+    <system>Travis</system>
+    <url>https://travis-ci.org/AmadeusITGroup/asciidoctor-extension-apidoc</url>
+  </ciManagement>
+
   <organization>
     <name>Amadeus s.a.s.</name>
     <url>http://www.amadeus.com</url>
   </organization>
+  <developers>
+    <developer>
+      <name>Romain Quinio</name>
+      <email>romain.quinio@amadeus.com</email>
+      <organization>Amadeus s.a.s.</organization>
+      <organizationUrl>http://www.amadeus.com</organizationUrl>
+    </developer>
+    <developer>
+      <name>Francois Lazarus</name>
+      <email>francois.lazarus@amadeus.com</email>
+      <organization>Amadeus s.a.s.</organization>
+      <organizationUrl>http://www.amadeus.com</organizationUrl>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    
+
     <asciidoctorj.version>2.0.0</asciidoctorj.version>
 
     <junit.jupiter.version>5.4.1</junit.jupiter.version>
@@ -41,7 +70,7 @@
       <version>${asciidoctorj.version}</version>
       <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
@@ -79,25 +108,47 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
 
+  </dependencies>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.0.0-M4</version>
       </plugin>
       <!-- Integration testing via asciidoctor-maven-plugin -->
       <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1</version>
         <configuration>
           <projectsDirectory>src/it</projectsDirectory>
           <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
@@ -122,6 +173,80 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.1.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <configuration>
+              <quiet>true</quiet>
+            </configuration>
+            <goals>
+              <goal>jar</goal>
+              <goal>aggregate-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <pushChanges>false</pushChanges>
+          <goals>deploy</goals>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.7</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>false</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
