--- a/src/it/sample/pom.xml
+++ b/src/it/sample/pom.xml
@@ -5,7 +5,11 @@
   <artifactId>asciidoctor-extension-apidoc-it</artifactId>
   <packaging>pom</packaging>
   <version>@project.version@</version>
-  <name>IT</name>
+  <name>asciidoctor-extension-apidoc-it</name>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <build>
     <plugins>
