--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.amadeus.asciidoc</groupId>
   <artifactId>asciidoctor-extension-apidoc</artifactId>
-  <version>1.1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>asciidoctor-extension-apidoc</name>
