--- a/src/it/sample/pom.xml
+++ b/src/it/sample/pom.xml
@@ -16,7 +16,7 @@
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
-        <version>2.0.0-RC.1</version>
+        <version>3.0.0</version>
         <configuration>
           <!-- Common configuration to all backends -->
           <enableVerbose>true</enableVerbose>
@@ -70,7 +70,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-pdf</artifactId>
-            <version>1.5.0-alpha.17</version>
+            <version>2.3.18</version>
           </dependency>
         </dependencies>
       </plugin>
